start diff-mmphc

--- a/theory.tex
+++ b/theory.tex
@@ -1209,10 +1209,10 @@ it could not become negative, since the effective permeability $\meff(\omega) > 
 
 % PK writes (where??) 
 % "The word “metamaterial” (MM) appeared first in the paper by Smith et al. in 2000 [6] where a structured material" -- is it true? 
-Despite the literature is not unanimous in this, a search shows that the term \textit{metamaterial} was first used by Walser in autumn 1999. Although somewhat redundant to \textit{artificial dielectrics} which has was used for decades before, it can be viewed as more fortunate as it does not imply that the effective parameters must resemble a dielectric, nor require the man-made origin of the structure.
+Despite the literature is not unanimous in this, a search shows that the term \textit{metamaterial} was first used by Walser in 1999. Although apparently redundant to \textit{artificial dielectrics}, which was used for decades before,  the term of \textit{metamaterial} can be viewed as more fortunate as it does not depend on whether the structure is man-made or not, nor whether its effective parameters mimic a dielectric or, e.g., a metal.
 
-The research of artificial dielectrics, or newly, metamaterials, gained on significant popularity in the early 2000s, probably in connection with the Pendry's paper \cite{pendry1999magnetism} which outlined how a negative index of refraction can be obtained in a periodic medium, where metallic wires introduce $\eeff<0$ and small metallic loops embedded in the lattice, known as \textit{split-ring resonators} (SRR), introduce $\meff<0$. 
-Its realization for the microwaves followed suite within a year \cite{smith2000composite}. %% TODO check XXX XXX
+The research of artificial dielectrics, or newly, metamaterials, gained on significant popularity in the early 2000s, probably in connection with the papers by Pendry \cite{pendry1999magnetism} and by Smith \cite{smith2000composite}. The former outlined how a negative index of refraction can be obtained in a structure composed of metallic wires introducing $\eeff<0$ and of small metallic loops, known as \textit{split-ring resonators} (SRR), introducing $\meff<0$. 
+Its realization for the microwaves followed suite within a year \cite{smith2000composite}. 
 
 A major issue are the dissipative losses in resonant periodic structures, which were not sufficiently resolved yet. Some quantitative improvements can be easily done, namely thickening the metallic structures and increasing their inductance-to-capacitance ratios of the split-ring resonators (SRR) \cite{zhou2008efficient}. At the near-infrared and optical wavelengths, SRRs are better substituted by perforated metallic sheets, so called \textit{fishnets}, % todo cite
 and it may be favorable to substitute metals with certain types of oxides with metallic-like behavoiul in the optical range \cite{naik2011oxides}.
@@ -1276,7 +1276,11 @@ the unification of mm and phc become apparently a more important topic when the 
 
 
 
-\section{The boundary between metamaterials and photonic crystals} 
+\section{The boundary between photonic crystals and metamaterials} 
+The historical section above suggests the primary difference between the notion of photonic crystals (PhC) and metamaterials (MM) is historical -- that is, each of these notions is connected to a different paradigm, which reflects in the way of description and in the search for application.
+
+At the end of the previous section it is however shown that the most recent research involves also structures at the boundary between both paradigms, and it is a pertinent question of whether there are some objective apriori differences. Several different criteria are listed below, which are not strictly equivalent. As a result, there exists a "grey zone" of structures that can more or less fit into both categories  simultaneously.
+
 \paragraph{Difference in the Bloch wavelength}%{{{
 Both the metamaterial (MM) and photonic crystal (PhC) concepts are inspired by solid-state physics, namely by theories of waves propagating in solids. The fundamental difference between these is historical - metamaterials are related to \textit{optical waves} propagating in the quasi-homogeneous crystal lattice, whereas the theory of photonic crystals was developed on the basis of \textit{electron waves} in the crystal lattice. The difference between electrons in solids and optical photons is in that the electron wavelength is similar to the inter-atomic distance ($\approx 10^{-10}$ m), demanding the use of the Bloch theorem, whereas the wavelength of light is four order of magnitude larger and the medium.
 %are in the scale (inter-atomic distances are in the order of $10^{-10}$ m, while in electromagnetic structures, the cell dimensions usually range from $10^{-2}$ to $10^{-7}$ m. 
