title pages compliant to the 2014 deans demands

--- a/title.tex
+++ b/title.tex
@@ -1,29 +1,98 @@
-
 \begin{center}
-\textbf{
+	\Large{\textbf{
 Czech Technical University in Prague\\
 Faculty of Nuclear Sciences and Physical Engineering\\ 
-Department of Physical Electronics\\
- }
- \vspace{1cm}
+%Department of Physical Electronics\\
+}}
+ \vspace{3cm}
 
 \includegraphics[width=5cm]{img/LogoCVUT}
-\vspace{4cm}
+\vspace{2cm}
 
-\large{doctoral thesis}\\
+\huge{\textbf{\scshape Doctoral Thesis}}\\
 \vspace{5mm}
-\textbf{\huge Metamaterials for the terahertz spectral range\\}
+{\LARGE\textbf{Metamaterials for the terahertz spectral range\\}}
 \end{center}
 
 \date{ } 			
- 
+
+
  \vfill
- \begin{tabular}{rl}
-  Author: 	&\textbf{Filip Dominec}\\
-  Advisor: 	&\textbf{Mgr. Filip Kadlec, Dr.}\\
-  Consultant: 	&\textbf{Doc. Ing. Ivan Richter, Dr.}\\ 
-  Year:		&\textbf{2015}\\
-  \end{tabular}
+\begin{minipage}{\textwidth}
+\Large{\textbf{Prague 2015}} \hfill \Large{\textbf{Filip Dominec}}
+\end{minipage}
 
-\thispagestyle{empty}
 
+\thispagestyle{empty} \newpage \setcounter{page}{1}
+
+% --------------------------------------------------------------------------------
+\chapter*{Bibliografický záznam}
+ %\begin{tabular}{rl}
+ %Author: 	&\textbf{Filip Dominec}\\
+ %Advisor: 	&\textbf{Mgr. Filip Kadlec, Dr.}\\
+ %Consultant: 	&\textbf{Doc. Ing. Ivan Richter, Dr.}\\ 
+ %Year:		&\textbf{2015}\\
+ %\end{tabular}
+
+\bgroup \def\arraystretch{1.5}
+\noindent\begin{tabular}{p{.25\linewidth}p{.7\linewidth}}
+Autor:					&\textbf{Ing. Filip Dominec} \\
+					~	&Czech Technical University in Prague\\
+					~	&Faculty of Nuclear Sciences and Physical Engineering\\ 
+					~	&Department of Physical Electronics\\
+Název práce:			&\textbf{Metamateriály pro terahertzovou spektrální oblast} \\
+Studijní program:		&\textbf{Aplikace přírodních věd} \\
+Studijní obor:			&\textbf{Fyzikální inženýrství} \\
+Školitel:				&\textbf{Mgr. Filip Kadlec, Dr.} \\
+Školitel specialista:	&\textbf{Doc. Ing. Ivan Richter, Dr.} \\
+Akademický rok:			&\textbf{2014/15} \\			%% TODO is this the correct format?
+Počet stran:			&\textbf{\pageref{enddocument}} \\  %% TODO shall give the overall page number or just that of the authored text?
+Klíčová slova			&\textbf{metamateriály, fotonické krystaly, terahertzová technologie, elektrodynamické simulace, homogenizace efektivních prostředí} \\
+\end{tabular}
+\egroup
+
+\thispagestyle{empty} \newpage
+
+% --------------------------------------------------------------------------------
+\chapter*{Bibliographic entry}
+\bgroup \def\arraystretch{1.5}
+\noindent\begin{tabular}{p{.25\linewidth}p{.7\linewidth}}
+Author:					&\textbf{Ing. Filip Dominec} \\
+					~	&Czech Technical University in Prague\\
+					~	&Faculty of Nuclear Sciences and Physical Engineering\\ 
+					~	&Department of Physical Electronics\\
+Title of Dissertation:	&\textbf{Metamaterials for the terahertz spectral range} \\
+Degree Programme:		&\textbf{Application of natural sciences} \\
+Field of Study:			&\textbf{Physical engineering} \\
+Supervisor:				&\textbf{Mgr. Filip Kadlec, Dr.} \\
+Supervisor specialist:	&\textbf{Doc. Ing. Ivan Richter, Dr.} \\
+Academic Year:			&\textbf{2014/15} \\
+Number of Pages:		&\textbf{\pageref{enddocument}} \\
+Keywords				&\textbf{metamaterials, photonic crystals, terahertz technology, computational electrodynamics, homogenization of effective media} \\
+\end{tabular}
+\egroup
+\thispagestyle{empty} \newpage
+
+% --------------------------------------------------------------------------------
+%\vspace{30mm}
+%\textbf{\huge{Abstrakt} }
+%\vspace{-5mm}
+
+%\begingroup \renewcommand{\newpage}{}
+\chapter*{Abstrakt}
+\noindent ~
+\todo{+ Z abstraktu musí být zřejmé, co je cílem předložené práce a jakých vědeckých výsledků doktorand osobně dosáhl.}
+
+\vspace{10mm}
+%\chapter*{Abstract} 
+{\let\clearpage\relax\chapter*{Abstract}}
+\noindent
+~
+\todo{+} 
+
+%\endgroup
+
+\thispagestyle{empty} \newpage
+% --------------------------------------------------------------------------------
+\chapter*{Acknowledgements}
+\thispagestyle{empty} \newpage
