doct to dissertation

--- a/title.tex
+++ b/title.tex
@@ -9,7 +9,7 @@ Faculty of Nuclear Sciences and Physical Engineering\\
 \includegraphics[width=5cm]{img/LogoCVUT}
 \vspace{2cm}
 
-\huge{\textbf{\scshape Doctoral Thesis}}\\
+\huge{\textbf{\scshape Dissertation thesis}}\\
 \vspace{5mm}
 {\LARGE\textbf{Metamaterials for the terahertz spectral range\\}}
 \end{center}
